typescript/checker/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithNumberType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithNumberType.ts:2:5
  |
2 | var NUMBER: number;
  |     ^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            240,
        ),
        hi: BytePos(
            241,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithNumberType.ts:15:16
   |
15 | var objA = new A();
   |                ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            539,
        ),
        hi: BytePos(
            543,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithNumberType.ts:27:25
   |
27 | var ResultIsBoolean6 = !objA.a;
   |                         ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            571,
        ),
        hi: BytePos(
            572,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithNumberType.ts:28:25
   |
28 | var ResultIsBoolean7 = !M.n;
   |                         ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            669,
        ),
        hi: BytePos(
            673,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithNumberType.ts:31:27
   |
31 | var ResultIsBoolean10 = !A.foo();
   |                           ^^^^

